# tuntun

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  menubar.rs
