[package]
name = "tuntun"
version = "0.1.0"
description = "囤囤 — macOS 菜单栏图标收纳"
authors = ["wangxiuwen"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tuntun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-autostart = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "5"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSView",
    "NSWorkspace",
    "NSEvent",
    "NSApplication",
] }
block2 = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
